@@ -7,7 +7,6 @@ import greencity.dto.habit.CustomHabitDtoRequest;
 import greencity.dto.user.UserVO;
 import greencity.exception.handler.CustomExceptionHandler;
 import greencity.service.HabitService;
-
 import java.security.Principal;
 import java.util.Arrays;
 import java.util.List;
@@ -92,19 +91,19 @@ class HabitControllerTest {
         int pageNumber = 1;
         int pageSize = 20;
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         List<String> tags = Arrays.asList("News", "Education");
 
         mockMvc.perform(get(habitLink + "/tags/search?page=" + pageNumber +
             "&lang=" + locale.getLanguage() + "&tags=News,Education")
-                .contentType(MediaType.APPLICATION_JSON))
+            .contentType(MediaType.APPLICATION_JSON))
             .andExpect(status().isOk());
         verify(habitService).getAllByTagsAndLanguageCode(pageable, tags, locale.getLanguage());
     }
 
     @Test
     void findAllHabitsTags() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
 
         mockMvc.perform(get(habitLink + "/tags")
@@ -122,7 +121,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParameters() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
 
@@ -141,7 +140,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersWithComplexityAndTags() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
         mockMvc.perform(get(habitLink + "/search")
@@ -158,7 +157,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersWithComplexityAndIsCustomHabit() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
         mockMvc.perform(get(habitLink + "/search")
@@ -175,7 +174,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersWithTagsAndIsCustomHabit() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
         mockMvc.perform(get(habitLink + "/search")
@@ -192,7 +191,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersWithComplexity() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
         mockMvc.perform(get(habitLink + "/search")
@@ -208,7 +207,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersWithIsCustomHabit() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
         mockMvc.perform(get(habitLink + "/search")
@@ -224,7 +223,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersWithTags() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         UserVO userVO = new UserVO();
         mockMvc.perform(get(habitLink + "/search")
@@ -240,7 +239,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersBadRequest() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         mockMvc.perform(get(habitLink + "/search")
             .content(gson.toJson(locale))
@@ -250,7 +249,7 @@ class HabitControllerTest {
 
     @Test
     void findByDifferentParametersBadRequestWithEmptyList() throws Exception {
-        Locale locale = new Locale("en");
+        Locale locale = Locale.of("en");
         Gson gson = new Gson();
         mockMvc.perform(get(habitLink + "/search")
             .param("tags", "")
